--- a/Client/src/01-login/.gitignore
+++ b/Client/src/01-login/.gitignore
@@ -1,17 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-auth_config.json
-
 # dependencies
-node_modules
-.pnp
+/node_modules
+/.pnp
 .pnp.js
 
 # testing
-coverage
+/coverage
 
 # production
-build
+/build
 
 # misc
 .DS_Store
@@ -23,3 +21,5 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+auth_config.json
